objects/box__BoxSign__c/box__BoxSign__c.object-meta.xml
<CustomObject>
    <description>BoxSign object</description>
    <label>Box Sign</label>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Box Signs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>