objects/box__BoxSign__c/fields/box__BoxSign_url__c.field-meta.xml
<CustomField>
    <fullName>box__BoxSign_url__c</fullName>
    <description>This field is reserved for future use and currently not functional.</description>
    <label>Open in Box Sign</label>
    <type>Url</type>
</CustomField>