objects/box__BoxSign__c/fields/box__Contact__c.field-meta.xml
<CustomField>
    <fullName>box__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BoxSigns</relationshipLabel>
    <relationshipName>BoxSigns</relationshipName>
    <type>Lookup</type>
</CustomField>