objects/box__BoxSign__c/fields/box__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>box__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>BoxSigns</relationshipLabel>
    <relationshipName>BoxSigns</relationshipName>
    <type>Lookup</type>
</CustomField>