objects/box__BoxSign__c/fields/box__Uuid__c.field-meta.xml
<CustomField>
    <fullName>box__Uuid__c</fullName>
    <label>Uuid</label>
    <type>TextArea</type>
</CustomField>